# quran-miracles

./: .dockerignore  .env.example  .gitignore  11_predictive_engine.md  12_cicd_github.md  CLAUDE.md  README.md  docker-compose.yml  package.json  railway.toml  tailwind.config.ts
backend/: Dockerfile  bootstrap_db.py  celery_app.py  main.py  pyproject.toml  requirements-ci.txt  requirements-nlp.txt  requirements.txt  start.py
backend/api/: deps.py
backend/api/routes/: discovery.py  prediction.py  quran.py
backend/arabic_nlp/: __init__.py  embeddings.py  embeddings_service.py  morphology.py  search.py
backend/database/: connection.py  models.py  neo4j_service.py  schema.sql  service.py
backend/database/migrations/: 001_initial.sql
backend/discovery_engine/: __init__.py
backend/discovery_engine/agents/: __init__.py  humanities.py  linguistic.py  pattern_discovery.py  quality_review.py  quran_rag.py  router.py  scientific.py  synthesis.py  tafseer.py
backend/discovery_engine/autonomous/: __init__.py  engine.py  scheduler.py
backend/discovery_engine/core/: graph.py  state.py
backend/discovery_engine/mcts/: __init__.py  explorer.py  hypothesis_explorer.py
backend/discovery_engine/prediction/: __init__.py  abductive.py  abductive_engine.py  navigator.py  research_navigator.py  statistical.py  statistical_safeguards.py  (+1 more)
backend/scripts/: apply_schema.py  validate_quran_integrity.py  validate_tafseers.py
backend/tests/: test_api.py  test_database.py  test_database_integration.py  test_discovery_engine.py  test_e2e_discovery.py  test_prediction_engine.py
(+62 files in other folders)
