[project]
name = "quran-miracles-backend"
version = "0.1.0"
description = "معجزات القرآن الكريم — AI Discovery Platform Backend"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.ruff.isort]
known-first-party = ["discovery_engine", "arabic_nlp", "database", "api"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
